# djangocms-events

./: .flake8  .gitignore  .pre-commit-config.yaml  .style.yapf  LICENSE  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg  webpack.config.js
assets/src/: calendar.css  calendar.js  index.js
djangocms_events/: admin.py  apps.py  cms_apps.py  cms_plugins.py  models.py  views.py
djangocms_events/migrations/: 0003_croppable_event_picture.py
djangocms_events/static/djangocms_events/webpack/: calendar.bundle.js  calendar.bundle.js.LICENSE.txt  index.bundle.js
djangocms_events/templates/djangocms_events/: calendar_plugin.html  event_detail.html  event_list.html  event_list_plugin.html
djangocms_events/templates/djangocms_events/include/: event-list-js.html  event_item.html
src/djangocms_events/: __about__.py  admin.py  cms_plugins.py  models.py  sitemaps.py  urls.py  views.py
src/djangocms_events/migrations/: 0001_initial.py  0002_calendar_default_picture.py  0003_alter_calendarplugin_cmsplugin_ptr_and_more.py  0004_event_duration.py
src/djangocms_events/static/djangocms_events/webpack/: 127.bundle.js  295.bundle.js  calendar.bundle.js  index.bundle.js
src/djangocms_events/templates/djangocms_events/: calendar_import.html  event_list.html
src/djangocms_events/templates/djangocms_events/include/: calendar-js.html  date_time.html  event_item.html
